# vector_ENCRYPT

./: CMakeLists.txt
main/2-d/: 2-dmain.cpp  2-dmain.h  decrypt.cpp  encrypt.cpp  get_public_key.cpp  main.cpp  orthogonal_to_polar.cpp  transfer.cpp  vector_calculate.cpp  vector_sources.h
main/final/: main.cpp  vector_struct.cpp  vector_struct.h
print_vector_matrix/: print.cpp
transfer message to vector/: transfer.cpp
vector_matrix_cal/: vector_matrix_cals.cpp
