cmake_minimum_required(VERSION 3.27)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled2 main/final/main.cpp
        main/final/vector_struct.cpp
        main/final/vector_struct.h
        main/2-d/vector_calculate.cpp
        main/2-d/vector_sources.h
        main/2-d/main.cpp
        main/2-d/orthogonal_to_polar.cpp
        main/2-d/get_public_key.cpp
        main/2-d/get_public_key.cpp
)
