cmake_minimum_required(VERSION 3.27)
project(vecctor_ENCRYPT)

set(CMAKE_CXX_STANDARD 17)

add_executable(vector_ENCRYPT main.cpp
        main/2-d/2-dmain.h
        #        main/final/vector_struct.cpp
#        main/final/vector_struct.h
#        main/2-d/vector_calculate.cpp
#        main/2-d/vector_sources.h
#        main/2-d/main.cpp
#        main/2-d/decrypt.cpp
#        main/2-d/encrypt.cpp
        #        main/2-d/transfer.cpp
#        main/2-d/get_public_key.cpp
#        main/2-d/get_public_key.cpp
)
